== master

== 0.7.6 / 2009-06-17

* Allow multiple state machines on the same class to target the same attribute
* Add support for :attribute to customize the attribute target, assuming the name is the first argument of #state_machine
* Simplify reading from / writing to machine-related attributes on objects
* Fix locale for ActiveRecord getting added to the i18n load path multiple times [Reiner Dieterich]
* Fix callbacks, guards, and state-driven behaviors not always working on tainted classes [Brandon Dimcheff]
* Use Ruby 1.9's built-in Object#instance_exec for bound callbacks when it's available
* Improve performance of cached dynamic state lookups by 25%

== 0.7.5 / 2009-05-25

* Add built-in caching for dynamic state values when the value only needs to be generated once
* Fix flawed example for using record ids as state values
* Don't evaluate state values until they're actually used in an object instance
* Make it easier to use event attributes for actions defined in the same class as the state machine
* Fix #save/save! running transitions in ActiveRecord integrations even when a machine's action is not :save

== 0.7.4 / 2009-05-23

* Fix #save! not firing event attributes properly in ActiveRecord integrations
* Fix log files being included in gems

== 0.7.3 / 2009-04-25

* Require DataMapper version be >= 0.9.4
* Explicitly load Sequel's built-in inflector (>= 2.12.0) for scope names
* Don't use qualified name for event attributes
* Fix #valid? being defined for DataMapper resources when dm-validations isn't loaded
* Add auto-validation of values allowed for the state attribute in ORM integrations

== 0.7.2 / 2009-04-08

* Add support for running multiple methods in a callback without using blocks
* Add more flexibility around how callbacks are defined
* Add security documentation around mass-assignment in ORM integrations
* Fix event attribute transitions being publicly accessible

== 0.7.1 / 2009-04-05
