@@ -395,28 +395,31 @@ begin
     
     class MachineWithCustomAttributeTest < ActiveRecord::TestCase
       def setup
-        @model = new_model
-        @machine = StateMachine::Machine.new(@model, :status, :attribute => :state)
+        @model = new_model do
+          alias_attribute :vehicle_status, :state
+        end
+        
+        @machine = StateMachine::Machine.new(@model, :status, :attribute => :vehicle_status)
         @machine.state :parked
         
         @record = @model.new
       end
       
       def test_should_add_validation_errors_to_custom_attribute
-        @record.state = 'invalid'
+        @record.vehicle_status = 'invalid'
         
         assert !@record.valid?
-        assert_equal ['State is invalid'], @record.errors.full_messages
+        assert_equal ['Vehicle status is invalid'], @record.errors.full_messages
         
-        @record.state = 'parked'
+        @record.vehicle_status = 'parked'
         assert @record.valid?
       end
       
       def test_should_check_custom_attribute_for_predicate
-        @record.state = nil
+        @record.vehicle_status = nil
         assert !@record.status?(:parked)
         
-        @record.state = 'parked'
+        @record.vehicle_status = 'parked'
         assert @record.status?(:parked)
       end
     end
