@@ -279,20 +279,24 @@ begin
     
     class MachineWithCustomAttributeTest < BaseTestCase
       def setup
-        @model = new_model
-        @machine = StateMachine::Machine.new(@model, :status, :attribute => :state)
+        @model = new_model do
+          alias_method :vehicle_status, :state
+          alias_method :vehicle_status=, :state=
+        end
+        
+        @machine = StateMachine::Machine.new(@model, :status, :attribute => :vehicle_status)
         @machine.state :parked
         
         @record = @model.new
       end
       
       def test_should_add_validation_errors_to_custom_attribute
-        @record.state = 'invalid'
+        @record.vehicle_status = 'invalid'
         
         assert !@record.valid?
-        assert_equal ['is invalid'], @record.errors.on(:state)
+        assert_equal ['is invalid'], @record.errors.on(:vehicle_status)
         
-        @record.state = 'parked'
+        @record.vehicle_status = 'parked'
         assert @record.valid?
       end
     end
